<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.RequestFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/card"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/requestEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card" />

            <TextView
                android:id="@+id/cardNumberDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/card_number_details"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requestEditText" />


            <TextView
                android:id="@+id/cardScheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/card_scheme"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardNumberDetails" />

            <TextView
                android:id="@+id/cardBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/card_brand"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardScheme" />

            <TextView
                android:id="@+id/cardType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/card_type"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardBrand" />

            <TextView
                android:id="@+id/cardPrepaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/card_prepaid"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardType" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/requestButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/bankContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/bank"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bankName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/bank_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bank" />

            <TextView
                android:id="@+id/bankUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:padding="@dimen/item_padding"
                android:text="@string/bank_url"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bankName" />

            <TextView
                android:id="@+id/bankPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:padding="@dimen/item_padding"
                android:text="@string/bank_phone"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bankUrl" />

            <TextView
                android:id="@+id/bankCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/bank_city"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bankPhone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/countryContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankContainer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/country"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/countryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/country_name"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/country" />

            <TextView
                android:id="@+id/countryCoordinate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_padding"
                android:text="@string/country_coordinate"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryName" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>